--- a/04-HTML-CSS/starter/index.html
+++ b/04-HTML-CSS/starter/index.html
@@ -7,11 +7,25 @@
   </head>
   <body>
     <h1>JavaScript is fun, but so is HTML & CSS!</h1>
-    <p>
+    <p class="first">
       You can learn JavaScript without HTML and CSS, but for DOM manuplation
       it's useful to have some basic ideas of HTML & CSS.
+
+      <a href="https://kasroid.github.io/Portfolio/">Kas Portfolio</a>
     </p>
     <h2>Another Heading</h2>
-    <p>Just another paragraph</p>
+    <p class="second">Just another paragraph</p>
+
+    <img
+      id="course-image"
+      src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg"
+    />
+
+    <form id="your-name">
+      <h2>Your name here</h2>
+      <p>Please fill in this form :)</p>
+      <input type="text" placeholder="Your name" />
+      <button>OK!</button>
+    </form>
   </body>
 </html>
